add login, logout, sessions

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="http://localhost:3030/pages/home/style_home.css">
 </head>
 <body>
+    <div class="right" id="player-info-div">
+        <h3 id="nickname-label">Mythery Player</h3>
+        <img
+            class="avatar"
+            id="avatar-image"
+            src="http://localhost:3030/images/player.jpg"
+            alt="player avatar"/>
+    </div>
     <div class="center">
         <h1>Balamut Project</h1>
         <button id="login-button" type="button">Login</button>
