--- a/pages/player_info/player_info.html
+++ b/pages/player_info/player_info.html
@@ -11,12 +11,14 @@
     <div class="center">
         <img
             class="avatar"
-            id="avatar"
+            id="avatar-image"
             src="http://localhost:3030/images/player.jpg"
             alt="player avatar" />
-        <h1 id="nickname">Player Nickname</h1>
-        <h3 id="email">player email</h3>
-        <h3 id="rating">player rating</h3>
+        <h1 id="nickname-label">Player Nickname</h1>
+        <h3 id="email-label">player email</h3>
+        <h3 id="rating-label">player rating</h3>
+        <button id="update-button" type="button">Update</button>
+        <button id="logout-button" type="button">Logout</button>
     </div>
     <script src="http://localhost:3030/pages/player_info/script_player_info.js"></script>
 </body>
