--- a/pages/player_info/player_info.html
+++ b/pages/player_info/player_info.html
@@ -17,8 +17,10 @@
         <h1 id="nickname-label">Player Nickname</h1>
         <h3 id="email-label">player email</h3>
         <h3 id="rating-label">player rating</h3>
-        <button id="update-button" type="button">Update</button>
-        <button id="logout-button" type="button">Logout</button>
+        <div class="hidden" id="hidden-div">
+            <button id="update-button" type="button">Update</button>
+            <button id="logout-button" type="button">Logout</button>
+        </div>
     </div>
     <script src="http://localhost:3030/pages/player_info/script_player_info.js"></script>
 </body>
